deploy/deploy-app-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-upload-file
  labels:
    azure.workload.identity/use: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: stream-upload-file
  template:
    metadata:
      labels:
        app: stream-upload-file
        azure.workload.identity/use: "true"  # Add this label
    spec:
      serviceAccountName: workload-identity-sa
      terminationGracePeriodSeconds: 60
      containers:
        - name: stream-upload-file
          image: quay.io/zhangchl007/stream-upload-file:mi-v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 50"]
---
apiVersion: v1
kind: Service
metadata:
  name: stream-upload-file
spec:
  type: ClusterIP
  selector:
    app: stream-upload-file
  ports:
    - port: 8080
      targetPort: 8080
